--- a/style/admin.style.css
+++ b/style/admin.style.css
@@ -1887,3 +1887,22 @@ a {
 .huge_it_forms_mess_subject_help_box:hover::before {opacity: 1;}
 .huge_it_forms_mess_subject_help_box:hover::after {top: 30px;}
 .huge_it_forms_mess_subject_help_box:hover::before {top: 20px;}
+
+.hugeit_contact_black_overlay {
+	position: relative;
+}
+
+.hugeit_contact_black_overlay:after {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0, 0, 0, .2);
+}
+
+.hugeit_contact_theme_pro_attention {
+	font-weight: 400;
+}
