--- a/style/admin.style.css
+++ b/style/admin.style.css
@@ -320,7 +320,7 @@ img.themeSpinner{
 #add-fields-block {
 	float:right;
 	list-style:none;
-	margin:0 30px 0 0;
+	margin: 0 10px 0 0;
 	display:table;
 }
 #add-fields-block  > li {
@@ -333,6 +333,7 @@ img.themeSpinner{
 	color:#fff;
 	cursor:pointer;
 	background:url(../images/plus.white.png) right center no-repeat #222;
+	border-radius: 4px;
 }
 #add-fields-block  > li.spinnerLi{
     background: none !important;
@@ -352,6 +353,8 @@ img.themeSpinner{
 #add-fields-block  > li:hover {
 	background-color:#0074a2;
 	color:#fff;
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
 }
 #add-fields-block  > li > ul {
 	display:none;
@@ -1921,8 +1924,7 @@ a {
 /*
 Custom Settings
 */
-
-.hugeit_contact_custom_settings_outer_wrapper {
+.hugeit_contact_custom_settings_main {
 	position: relative;
 	float: left;
 	width: 100%;
@@ -1930,14 +1932,63 @@ Custom Settings
 	font-size: 14px;
 	color: #555459;
 	background: #fff;
-	padding: 15px;
+	padding: 10px 15px;
 	box-sizing: border-box;
 	box-shadow: 1px 2px 2px 2px rgba(0,0,0,0.15);
 	border-radius: 3px;
 }
 
+.-hidden {
+	display: none;
+}
+
+.hugeit_contact_custom_settings_dropdown_heading {
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	margin-top: 10px;
+	padding: 10px 30px 10px 10px;
+	background-color: #ff6011;
+	color: #fff;
+	border-radius: 4px;
+}
+
+.hugeit_contact_custom_settings_dropdown_description {
+	float: right;
+	position: relative;
+	width: calc(100% - 250px);
+	margin-bottom: 10px;
+	font-style: italic;
+	font-size: 13px;
+}
+
+
+.hugeit_contact_custom_settings_dropdown_heading h4 {
+	margin:0;
+}
+
+.hugeit_contact_custom_settings_dropdown_heading i {
+	position: absolute;
+	top: 12px;
+	right: 8px;
+	font-size: 14px;
+}
+
+.hugeit_contact_custom_settings_dropdown_heading p {
+	margin-bottom: 0;
+}
+
+.hugeit_contact_custom_settings_dropdown_content {
+	margin-top: 40px;
+}
+
+
+.hugeit_contact_custom_settings_outer_wrapper {
+	position: relative;
+}
+
 .hugeit_contact_custom_settings_outer_wrapper h3 {
-	font-size: 2rem;
+	font-size: 1.4rem;
 	color:#555459;
 }
 
