--- a/style/admin.style.css
+++ b/style/admin.style.css
@@ -1950,6 +1950,7 @@ Custom Settings
 	box-sizing: border-box;
 	box-shadow: 1px 2px 2px 2px rgba(0,0,0,0.15);
 	border-radius: 3px;
+	z-index: 2;
 }
 
 .-hidden {
