--- a/style/admin.style.css
+++ b/style/admin.style.css
@@ -19,7 +19,7 @@ button[disabled], input[disabled], select[disabled], textarea[disabled] {
 }
 #poststuff h2{
     display: inline-block !important;
-    float: left !important;
+    /*float: left !important;*/
     font-size: 19px;
     padding: 0 0 15px 0;
 }
