--- a/style/form-front.css
+++ b/style/form-front.css
@@ -488,3 +488,23 @@ body .hugeit-contact-wrapper input, body .hugeit-contact-wrapper textarea {paddi
     -webkit-transition: all 0.5s ease !important;
     transition: all 0.5s ease !important;
 }
+/* Pagination */
+.paginationUl {
+    margin-top:30px!important;
+    width:100%;
+    margin:0 auto;
+    text-align: center;
+
+}
+
+
+.paginationUl  li{
+    line-height: 40px;
+    width:34px;
+    height:40px;
+    display: inline-block;
+    cursor: pointer;
+    list-style: none;
+}
+
+/* Pagination */
