--- a/style/admin.tracking.css
+++ b/style/admin.tracking.css
@@ -137,7 +137,7 @@
 
 /** Deactivation Feedback */
 #forms-contact-deactivation-feedback .-hugeit-modal-content-header {
-    background-color: #0a315c;
+    background-color: #1279B9;
     border-bottom: 3px solid #d7d7d7;
     color: #fff;
 }
