Changed bg color

--- a/style/admin.style.css
+++ b/style/admin.style.css
@@ -344,7 +344,7 @@ img.themeSpinner{
 	width:100%;
 	padding:10px 0 10px 0;
 	height:40px;
-	background:#fff;
+	background:#f3f4f8;
 	border-bottom: 1px solid #CCCCCC;
 	position: relative;
 }
